--- a/workSummery.Css
+++ b/workSummery.Css
@@ -5,25 +5,22 @@ table{
     max-width:fit-content;
     text-align: center;
     border-spacing:5px;
- 
 }
-.headLine{
+caption{
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+th{
     background-color: rgb(157, 161, 165);
     border-radius: 10px;
     padding:10px;
 }
-
 td{
     padding:10px;
     border-radius: 10px;
     background-color: black;
     color:white;
     align-content: start;
-}
-caption{
-    font-size: 24px;
-    font-weight: 500;
-    margin-bottom: 10px;
-    background-color: hsl(231, 71%, 0%);
 }
 
